@@ -3,7 +3,7 @@ dnl	This file is an input file used by the GNU "autoconf" program to
 dnl	generate the file "configure", which is run during Tcl installation
 dnl	to configure the system for the local environment.
 #
-# RCS: @(#) $Id: configure.in,v 1.57.2.11 2002/07/24 13:54:47 das Exp $
+# RCS: @(#) $Id: configure.in,v 1.57.2.12 2002/07/30 19:18:28 mdejong Exp $
 
 AC_INIT(../generic/tcl.h)
 
@@ -385,11 +385,8 @@ TCL_LD_SEARCH_FLAGS="${LD_SEARCH_FLAGS}"
 if test "${SHARED_BUILD}" = "1" -a "${SHLIB_SUFFIX}" != "" ; then
     TCL_SHLIB_CFLAGS="${SHLIB_CFLAGS}"
     eval "TCL_LIB_FILE=libtcl${TCL_SHARED_LIB_SUFFIX}"
-    if test "x$DL_OBJS" = "xtclLoadAout.o"; then
-	MAKE_LIB="\${STLIB_LD} \[$]@ \${OBJS}"
-    else
-	MAKE_LIB="\${SHLIB_LD} ${TCL_SHLIB_LD_EXTRAS} -o \[$]@ \${OBJS} ${SHLIB_LD_LIBS}"
-    fi
+    MAKE_LIB="\${SHLIB_LD} ${TCL_SHLIB_LD_EXTRAS} -o \[$]@ \${OBJS} ${SHLIB_LD_LIBS}"
+    RANLIB=:
 else
     case $system in
         BSD/OS*)
@@ -405,9 +402,6 @@ else
     TCL_SHLIB_CFLAGS=""
     eval "TCL_LIB_FILE=libtcl${TCL_UNSHARED_LIB_SUFFIX}"
     MAKE_LIB="\${STLIB_LD} \[$]@ \${OBJS}"
-    if test "x$DL_OBJS" = "xtclLoadDyld.o"; then
-	MAKE_LIB="${MAKE_LIB} ; \${RANLIB} \$@"
-    fi
 fi
 
 # tclConfig.sh needs a version of the _LIB_SUFFIX that has been eval'ed
